<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>synthetic_workload</name>
  <version>0.12.0</version>
  <description>Package to test behaviour of different executors</description>
  <maintainer email="oren.bell@wustl.edu">Oren Bell</maintainer>
  <license>Apache License 2.0</license>
  <author email="oren.bell@wustl.edu">Oren Bell</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>synthetic_workload_msgs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>synthetic_workload_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
     <build_type>ament_cmake</build_type>
  </export>
</package>